assignments phase 3, ver 3.0.0